# grpcbridge

./: .gitignore  .golangci.yml  .goreleaser.yml  Makefile  README.md  bridge.go  codecov.yml  forwarder.go  go.mod  go.sum  grpcbridge.go  proxy.go  reflection.go
bridgedesc/: dummy.go  parse.go  parse_test.go  types.go
bridgelog/: discard.go  logging.go
deploy/: Dockerfile
discovery/: discovery.go
e2e/: empty.cjs  package-lock.json  package.json  test.js
examples/: compose.yml
grpcadapter/: conn.go  forwarder.go  forwarder_test.go  grpcadapter.go  metadata.go  metadata_test.go  pool.go  rpc_util.go  stream.go
grpcproxy/: server.go
reflection/: client.go  client_test.go  parse.go  reflection_test.go  resolver.go  resolver_test.go  util.go
route/: service_router.go
routing/: pattern_router.go  pattern_router_test.go  routing.go  routing_test.go  service_router.go  service_router_test.go  template_router.go  template_router_test.go
test/: Makefile  compose.yml
test/pytestapi/: Dockerfile  Makefile  buf.gen.yaml  pyproject.toml
test/pytestapi/proto/pytestapi/v1/: pytestapi.proto
test/pytestapi/pytestapi/: __init__.py  service.py
test/pytestapi/scripts/: server.py
test/rstestapi/: Cargo.toml  Dockerfile  build.rs
test/rstestapi/proto/rstestapi/v1/: rstestapi.proto
test/rstestapi/src/: main.rs
transcoding/: http.go  http_fuzz_test.go  http_test.go  json.go  json_test.go  transcoding.go  transcoding_test.go
webbridge/: grpcweb.go  http.go  http_test.go  webbridge.go  webbridge_test.go  websocket.go  websocket_test.go
(+99 files in other folders)
