[package]
edition = "2021"
name = "rstestapi"
version = "0.1.0"

[dependencies]
anyhow = "1.0.81"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "full"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[build-dependencies]
tonic-build = "0.11.0"
